.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:04:48 **** Rebuild of configuration Debug for project Archivo de prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Archivo de prueba.o" "..\\src\\Archivo de prueba.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Structures.o" "..\\src\\Structures.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Biblioteca.o" "..\\src\\Biblioteca.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Input.o" "..\\src\\Input.c" 
gcc -o "Archivo de prueba.exe" "src\\Archivo de prueba.o" "src\\Biblioteca.o" "src\\Input.o" "src\\Structures.o" 
Info: Nothing to build for Archivo de prueba
15:05:31 **** Incremental Build of configuration Debug for project Archivo de prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Archivo de prueba.o" "..\\src\\Archivo de prueba.c" 
..\src\Archivo de prueba.c: In function 'main':
..\src\Archivo de prueba.c:44:6: warning: 'main' is normally a non-static function [-Wmain]
   44 |  int main() {
      |      ^~~~
..\src\Archivo de prueba.c: In function 'main':
..\src\Archivo de prueba.c:48:70: error: expected ')' before 'Ingrese'
   48 |  nota = PedirEntero("Ingrese su nota: 1, 10); Legajo = Pedir Entero("Ingrese su Legajo: ", 1, 1000);
      |                                                                      ^~~~~~~
      |                                                                      )
..\src\Archivo de prueba.c:48:89: warning: missing terminating " character
   48 |  nota = PedirEntero("Ingrese su nota: 1, 10); Legajo = Pedir Entero("Ingrese su Legajo: ", 1, 1000);
      |                                                                                         ^
..\src\Archivo de prueba.c:48:89: error: missing terminating " character
   48 |  nota = PedirEntero("Ingrese su nota: 1, 10); Legajo = Pedir Entero("Ingrese su Legajo: ", 1, 1000);
      |                                                                                         ^~~~~~~~~~~~
..\src\Archivo de prueba.c:48:9: error: too few arguments to function 'PedirEntero'
   48 |  nota = PedirEntero("Ingrese su nota: 1, 10); Legajo = Pedir Entero("Ingrese su Legajo: ", 1, 1000);
      |         ^~~~~~~~~~~
..\src\Archivo de prueba.c:7:5: note: declared here
    7 | int PedirEntero(char mensaje [], int min, int max);
      |     ^~~~~~~~~~~
..\src\Archivo de prueba.c:51:11: error: expected ';' before '}' token
   51 |  return 0;
      |           ^
      |           ;
   52 |  }
      |  ~         
..\src\Archivo de prueba.c:47:6: warning: unused variable 'Legajo' [-Wunused-variable]
   47 |  int Legajo;
      |      ^~~~~~
..\src\Archivo de prueba.c:46:6: warning: variable 'nota' set but not used [-Wunused-but-set-variable]
   46 |  int nota;
      |      ^~~~
At top level:
..\src\Archivo de prueba.c:53:6: warning: 'PedirEntero' defined but not used [-Wunused-function]
   53 |  int PedirEntero(char mensaje[], int min, int max){
      |      ^~~~~~~~~~~
..\src\Archivo de prueba.c:44:6: warning: 'main' defined but not used [-Wunused-function]
   44 |  int main() {
      |      ^~~~
15:06:05 **** Incremental Build of configuration Debug for project Archivo de prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Archivo de prueba.o" "..\\src\\Archivo de prueba.c" 
..\src\Archivo de prueba.c: In function 'main':
..\src\Archivo de prueba.c:49:70: error: expected ')' before 'Ingrese'
   49 |  nota = PedirEntero("Ingrese su nota: 1, 10); Legajo = Pedir Entero("Ingrese su Legajo: ", 1, 1000);
      |                                                                      ^~~~~~~
      |                                                                      )
..\src\Archivo de prueba.c:49:89: warning: missing terminating " character
   49 |  nota = PedirEntero("Ingrese su nota: 1, 10); Legajo = Pedir Entero("Ingrese su Legajo: ", 1, 1000);
      |                                                                                         ^
..\src\Archivo de prueba.c:49:89: error: missing terminating " character
   49 |  nota = PedirEntero("Ingrese su nota: 1, 10); Legajo = Pedir Entero("Ingrese su Legajo: ", 1, 1000);
      |                                                                                         ^~~~~~~~~~~~
..\src\Archivo de prueba.c:49:9: error: too few arguments to function 'PedirEntero'
   49 |  nota = PedirEntero("Ingrese su nota: 1, 10); Legajo = Pedir Entero("Ingrese su Legajo: ", 1, 1000);
      |         ^~~~~~~~~~~
..\src\Archivo de prueba.c:7:5: note: declared here
    7 | int PedirEntero(char mensaje [], int min, int max);
      |     ^~~~~~~~~~~
..\src\Archivo de prueba.c:54:11: error: expected ';' before '}' token
   54 |  return 0;
      |           ^
      |           ;
   55 | }
      | ~          
..\src\Archivo de prueba.c:48:6: warning: unused variable 'Legajo' [-Wunused-variable]
   48 |  int Legajo;
      |      ^~~~~~
..\src\Archivo de prueba.c:47:6: warning: variable 'nota' set but not used [-Wunused-but-set-variable]
   47 |  int nota;
      |      ^~~~
15:07:01 **** Incremental Build of configuration Debug for project Archivo de prueba ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Archivo de prueba.o" "..\\src\\Archivo de prueba.c" 
gcc -o "Archivo de prueba.exe" "src\\Archivo de prueba.o" "src\\Biblioteca.o" "src\\Input.o" "src\\Structures.o" 
